The compiler now enforces what review assumed: 4,374 warnings to zero, gates promoted
The recorded 200-warning baseline was javac's -Xmaxwarns 100 truncating per
compilation set; the true inventory was 4,374 across 36 checks, now zero
with 29 individually-justified suppressions and none blanket. NullAway
pinned to ERROR and -XepAllErrorsAsWarnings removed — promotion proven to
fail a build on a real violation. Real bugs fixed along the way: Turkish-
locale token folding, a test that asserted nothing, a leaked Stream, dead
defensive null-checks hiding schema-nullable reads across the pos module,
and a fake that NPE'd instead of exercising behavior. Two checkpoint-era
regressions from the compile-unblock corrected: the fiscal claim reads its
deadline nullable again as the domain always intended, and the two slim
outbox test contexts force CGLIB to match production now that
JdbcOutboxStore carries an interface.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>